WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52396
Relax the ESSL valid charset a little bit to include " ' `
https://bugs.webkit.org/show_bug.cgi?id=52396
Summary
Relax the ESSL valid charset a little bit to include " ' `
Zhenyao Mo
Reported
2011-01-13 14:15:59 PST
As gman@google points out, something like #ERROR "..." is legal. Also, folks tend to use these three characters a lot in the comments, and there is no risk of crashing if we include them.
Attachments
Patch
(4.51 KB, patch)
2011-01-13 14:28 PST
,
Zhenyao Mo
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2011-01-13 14:28:33 PST
Created
attachment 78855
[details]
Patch Simple patch. Please review.
Kenneth Russell
Comment 2
2011-01-13 14:32:32 PST
Comment on
attachment 78855
[details]
Patch Looks fine.
Zhenyao Mo
Comment 3
2011-01-13 14:35:07 PST
Committed
r75735
: <
http://trac.webkit.org/changeset/75735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug