2011-01-13  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        Relax the ESSL valid charset a little bit to include " ' `
        https://bugs.webkit.org/show_bug.cgi?id=52396

        * html/canvas/WebGLRenderingContext.cpp:
2011-01-13  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Relax the ESSL valid charset a little bit to include " ' `
        https://bugs.webkit.org/show_bug.cgi?id=52396

        * fast/canvas/webgl/invalid-passed-params-expected.txt:
        * fast/canvas/webgl/invalid-passed-params.html:


Canonical link: https://commits.webkit.org/66000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75735 268f45cc-cd09-0410-ab3c-d52691b4dbfc